[gd_scene load_steps=10 format=3 uid="uid://n7i4ny7kw54r"]

[ext_resource type="Script" uid="uid://crsx30q4opahk" path="res://deck_editor/card_bank/filter.gd" id="1_aukev"]
[ext_resource type="Texture2D" uid="uid://dfgq0icplko8e" path="res://menu.png" id="1_ol7am"]
[ext_resource type="Texture2D" uid="uid://cgd0fn7rsifvy" path="res://buttonH.png" id="2_e3w1n"]
[ext_resource type="Texture2D" uid="uid://ctnqx30f536bd" path="res://buttonD.png" id="3_ckd3w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_61l68"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rk4wn"]
texture = ExtResource("2_e3w1n")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1xpjn"]
texture = ExtResource("2_e3w1n")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu1ig"]
texture = ExtResource("3_ckd3w")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s4jtf"]

[node name="Filter" type="Control"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 35.0
script = ExtResource("1_aukev")

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 1
offset_left = -35.0
offset_bottom = 35.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_61l68")
theme_override_styles/hover = SubResource("StyleBoxTexture_rk4wn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1xpjn")
theme_override_styles/normal = SubResource("StyleBoxTexture_wu1ig")
action_mode = 0
button_mask = 3
text = "!"

[node name="Filter" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 35)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Pre" type="NinePatchRect" parent="Filter"]
texture_filter = 1
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("1_ol7am")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="LineEdit" type="LineEdit" parent="Filter/Pre"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -15.5
offset_right = 8.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_constants/minimum_character_width = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_s4jtf")
placeholder_text = "+"
alignment = 1

[node name="Tag" type="NinePatchRect" parent="Filter"]
texture_filter = 1
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
texture = ExtResource("1_ol7am")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="LineEdit" type="LineEdit" parent="Filter/Tag"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/minimum_character_width = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_s4jtf")
placeholder_text = "c"
alignment = 1
max_length = 2

[node name="Operator" type="NinePatchRect" parent="Filter"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
texture = ExtResource("1_ol7am")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="LineEdit" type="LineEdit" parent="Filter/Operator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 20.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 1)
theme_override_constants/minimum_character_width = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_s4jtf")
placeholder_text = "="
alignment = 1

[node name="Param" type="NinePatchRect" parent="Filter"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_ol7am")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="LineEdit" type="LineEdit" parent="Filter/Param"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_right = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/minimum_character_width = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_s4jtf")
placeholder_text = "Enter Filter "

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="Filter/Pre/LineEdit" to="." method="_change_pre_text"]
[connection signal="text_changed" from="Filter/Tag/LineEdit" to="." method="_change_tag"]
[connection signal="text_changed" from="Filter/Operator/LineEdit" to="." method="_change_operator"]
[connection signal="text_changed" from="Filter/Param/LineEdit" to="." method="_change_parameter"]
